--- a/app/index.html
+++ b/app/index.html
@@ -1,211 +1,211 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=1600, initial-scale=1">
-	<meta name="description" content="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
-	<meta name="keywords" content="Дизайнер интерьера, частный дизайнер, персональный дизайнер, дизайнер не дорого, Дизайнер в Спб">
-	<meta name="robots" content="index, follow">
-	<meta name="author" content="Andrey Strebkov">
-	<title> Геометрия дизайна - Творческое объединение дизайнеров интерьера </title>
-	<link rel="stylesheet" href="css/libs.css">
-	<link rel="stylesheet" href="css/main.css">
-	<script src="js/libs.min.js"></script>
-	<script src="js/main.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=1600, initial-scale=1">
+  <meta name="description" content="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
+  <meta name="keywords" content="Дизайнер интерьера, частный дизайнер, персональный дизайнер, дизайнер не дорого, Дизайнер в Спб">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Andrey Strebkov">
+  <title> Геометрия дизайна - Творческое объединение дизайнеров интерьера </title>
+  <link rel="stylesheet" href="css/libs.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/libs.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
-	<div id="container">
-		<section id="block-main">
-			<div id="block-main-top">
-				<div id="logo">
-					<img src="img/logo.png" alt="logo">
-					Геометрия<br>Дизайна
-				</div>
-				<nav>
-					<ul>
-					<li><a id="menu-portfolio">ПОРТФОЛИО</a></li>
-					<li><a id="menu-price">РАСЦЕНКИ</a></li>
-					<li><a id="menu-contact">КОНТАКТЫ</a></li>
-					</ul>
-				</nav>
-				<div class="contact">8 921 979-34-25</div>
-			</div>
-			<div id="block-main-description">
-				<h1>Творческое объединение <span>дизайнеров интерьера</span><br> домов, квартир, общественных помещений.</h1>
-				<h3>Работаем в <span>Санкт-Петербургe</span> и <span>Ленинградской области.</span></h3>
-			</div>
-			<!-- <img alt="img" id="arrow" src="img/arrow.png"> -->
-		</section>
-		<section id="block-portfolio">
-			<h2>ПОРТФОЛИО</h2>
-<!-- 			<div>
-				<a id="newGalleryButton" class="active">Новые работы</a>
-				<a id="oldGalleryButton">Прошлые работы</a>
-			</div> -->
-			<ul id="newGallery" class="popup-gallery owl-carousel ">
-				<li>
-					<a href="img/gallery/1.jpg"><img alt="img" src="img/gallery/1.jpg"></a>
-					<a href="img/gallery/2.jpg"><img alt="img" src="img/gallery/2.jpg"></a>
-				</li><li>
-					<a href="img/gallery/3.jpg"><img alt="img" src="img/gallery/3.jpg"></a>
-					<a href="img/gallery/4.jpg"><img alt="img" src="img/gallery/4.jpg"></a>
-				</li><li>
-					<a href="img/gallery/5.jpg"><img alt="img" src="img/gallery/5.jpg"></a>
-					<a href="img/gallery/6.jpg"><img alt="img" src="img/gallery/6.jpg"></a>
-				</li><li>
-					<a href="img/gallery/7.jpg"><img alt="img" src="img/gallery/7.jpg"></a>
-					<a href="img/gallery/8.jpg"><img alt="img" src="img/gallery/8.jpg"></a>
-				</li><li>
-					<a href="img/gallery/10.jpg"><img alt="img" class="singleImg" src="img/gallery/10.jpg"></a>
-				</li><li>
-					<a href="img/gallery/9.jpg"><img alt="img" src="img/gallery/9.jpg"></a>
-					<a href="img/gallery/11.jpg"><img alt="img" src="img/gallery/11.jpg"></a>
-				</li><li>
-					<a href="img/gallery/12.jpg"><img alt="img" src="img/gallery/12.jpg"></a>
-					<a href="img/gallery/13.jpg"><img alt="img" src="img/gallery/13.jpg"></a>
-				</li><li>
-					<a href="img/gallery/14.jpg"><img alt="img" src="img/gallery/14.jpg"></a>
-					<a href="img/gallery/15.jpg"><img alt="img" src="img/gallery/15.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/16.jpg"><img alt="img" src="img/gallery/16.jpg"></a>
-					<a href="img/gallery/17.jpg"><img alt="img" src="img/gallery/17.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/18.jpg"><img alt="img" src="img/gallery/18.jpg"></a>
-					<a href="img/gallery/19.jpg"><img alt="img" src="img/gallery/19.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/20.jpg"><img alt="img" src="img/gallery/20.jpg"></a>
-					<a href="img/gallery/21.jpg"><img alt="img" src="img/gallery/21.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/22.jpg"><img alt="img" src="img/gallery/22.jpg"></a>
-					<a href="img/gallery/23.jpg"><img alt="img" src="img/gallery/23.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/24.jpg"><img alt="img" src="img/gallery/24.jpg"></a>
-					<a href="img/gallery/25.jpg"><img alt="img" src="img/gallery/25.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/26.jpg"><img alt="img" src="img/gallery/26.jpg"></a>
-					<a href="img/gallery/27.jpg"><img alt="img" src="img/gallery/27.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/28.jpg"><img alt="img" src="img/gallery/28.jpg"></a>
-					<a href="img/gallery/29.jpg"><img alt="img" src="img/gallery/29.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/30.jpg"><img alt="img" src="img/gallery/30.jpg"></a>
-					<a href="img/gallery/31.jpg"><img alt="img" src="img/gallery/31.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/32.jpg"><img alt="img" class="singleImg" src="img/gallery/32.jpg"></a>
-				</li><li><!-- 
-					<a href="img/gallery/33.jpg"><img alt="img" class="singleImg" src="img/gallery/33.jpg"></a>
-				</li><li>
-					<a href="img/gallery/34.jpg"><img alt="img" src="img/gallery/34.jpg"></a>
-					<a href="img/gallery/41.jpg"><img alt="img" src="img/gallery/41.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/35.jpg"><img alt="img" class="singleImg" src="img/gallery/35.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/36.jpg"><img alt="img" class="singleImg" src="img/gallery/36.jpg"></a>
-				</li><li>	 -->
-					<a href="img/gallery/37.jpg"><img alt="img" class="singleImg" src="img/gallery/37.jpg"></a><!-- 
-				</li><li>	
-					<a href="img/gallery/38.jpg"><img alt="img" class="singleImg" src="img/gallery/38.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/39.jpg"><img alt="img" class="singleImg" src="img/gallery/39.jpg"></a> -->
-<!-- 				</li><li>	
-					<a href="img/gallery/40.jpg"><img alt="img" class="singleImg" src="img/gallery/40.jpg"></a>
-				</li><li>
-					<a href="img/gallery/42.jpg"><img alt="img" class="singleImg" src="img/gallery/42.jpg"></a> -->
-				</li>
-			<!-- </ul>
-			<ul id="oldGallery" class="popup-gallery owl-carousel hidden">
-				<li>
-					<a href="img/gallery/52.jpg"><img alt="img" src="img/gallery/52.jpg"></a>
-				</li><li>
-					<a href="img/gallery/43.jpg"><img alt="img" src="img/gallery/43.jpg"></a>
-					<a href="img/gallery/44.jpg"><img alt="img" src="img/gallery/44.jpg"></a>
-				</li><li>
-					<a href="img/gallery/46.jpg"><img alt="img" src="img/gallery/46.jpg"></a>
-					<a href="img/gallery/47.jpg"><img alt="img" src="img/gallery/47.jpg"></a>
-				</li><li>
-					<a href="img/gallery/48.jpg"><img alt="img" src="img/gallery/48.jpg"></a>
-					<a href="img/gallery/49.jpg"><img alt="img" src="img/gallery/49.jpg"></a>
-				</li><li>
-					<a href="img/gallery/50.jpg"><img alt="img" src="img/gallery/50.jpg"></a>
-					<a href="img/gallery/51.jpg"><img alt="img" src="img/gallery/51.jpg"></a>
-				</li><li>
-					<a href="img/gallery/53.jpg"><img alt="img" src="img/gallery/53.jpg"></a>
-				</li><li>
-					<a href="img/gallery/45.jpg"><img alt="img" src="img/gallery/45.jpg"></a>
-					<a href="img/gallery/56.jpg"><img alt="img" src="img/gallery/56.jpg"></a>
-				</li><li>
-					<a href="img/gallery/55.jpg"><img alt="img" src="img/gallery/55.jpg"></a>
-				</li>-->
-			</ul> 
-		</section>
-		<section id="block-price">
-			<h2>расценки</h2>
-				<ul>
-					<li></li>
-					<li><h3 class="orange">1000 <span>р./кв.м.</span></h3></li>
-					<li class="space"></li>
-					<li><h3 class="green">1500 <span>р./кв.м.</span></h3></li>
-				</ul>			<ul>
-					<li>Обмерный план</li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>План демонтажа и монтажа </li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>План расстановки мебели и внутреннего оборудования с габаритами и размерами</li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>План по электрике относительно расстановки мебели </li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>План полов и потолков</li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>Развертка стен </li>
-					<li><img alt="img" src="img/tick.png"></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li>Ведение объекта (авторский надзор)</li>
-					<li></li>
-					<li class="space"></li>
-					<li><img alt="img" src="img/tick.png"></li>
-				</ul>			<ul>
-					<li></li>
-					<li></li>
-					<li class="space"></li>
-					<li></li>
-				</ul>			<ul>
-					<li><h3>Визуализация проекта</h3></li>
-					<li></li>
-					<li class="space"></li>
-					<li><h3 class="blue">250 <span>р./кв.м.</span></h3></li>
-				</ul>
-		</section>
-		<section id="block-order">
-			<form name="order">
-				<h1>У вас есть вопросы?</h1>				
-				<p>Оставьте заявку и мы с Вами свяжемся</p>
-				<input type="text" name="name" size="40" placeholder="Ваше имя">
-				<input type="tel" name="phone" size="40" placeholder="Телефон">
-				<input type="email" name="email" size="40" placeholder="Электронная почта">
-				<input id="submit" type="submit" name="send" value="Отправить заявку">
-			</form>
-		</section>
-		<footer>
-			<div class="contact">8 921 979-34-25</div>
-			<div id="email">geometriadizaina@mail.ru</div>
-			<p>2018 «Геометрия Дизайна». Все права защищены.</p>
-		</footer>
-	</div>
+  <div class="container">
+    <section id="block-main">
+      <div id="block-main-top">
+        <div id="logo">
+          <img src="img/logo.png" alt="logo">
+          <p>Геометрия<br>Дизайна</p>
+        </div>
+        <nav>
+          <ul>
+          <li><a id="menu-portfolio">ПОРТФОЛИО</a></li>
+          <li><a id="menu-price">РАСЦЕНКИ</a></li>
+          <li><a id="menu-contact">КОНТАКТЫ</a></li>
+          </ul>
+        </nav>
+        <div class="contact">8 921 979-34-25</div>
+      </div>
+      <div id="block-main-description">
+        <h1>Творческое объединение <span>дизайнеров интерьера</span><br> домов, квартир, общественных помещений.</h1>
+        <h3>Работаем в <span>Санкт-Петербургe</span> и <span>Ленинградской области.</span></h3>
+      </div>
+      <!-- <img alt="img" id="arrow" src="img/arrow.png"> -->
+    </section>
+    <section id="block-portfolio">
+      <h2>ПОРТФОЛИО</h2>
+<!--       <div>
+        <a id="newGalleryButton" class="active">Новые работы</a>
+        <a id="oldGalleryButton">Прошлые работы</a>
+      </div> -->
+      <ul id="newGallery" class="popup-gallery owl-carousel ">
+        <li>
+          <a href="img/gallery/1.jpg"><img alt="img" src="img/gallery/1.jpg"></a>
+          <a href="img/gallery/2.jpg"><img alt="img" src="img/gallery/2.jpg"></a>
+        </li><li>
+          <a href="img/gallery/3.jpg"><img alt="img" src="img/gallery/3.jpg"></a>
+          <a href="img/gallery/4.jpg"><img alt="img" src="img/gallery/4.jpg"></a>
+        </li><li>
+          <a href="img/gallery/5.jpg"><img alt="img" src="img/gallery/5.jpg"></a>
+          <a href="img/gallery/6.jpg"><img alt="img" src="img/gallery/6.jpg"></a>
+        </li><li>
+          <a href="img/gallery/7.jpg"><img alt="img" src="img/gallery/7.jpg"></a>
+          <a href="img/gallery/8.jpg"><img alt="img" src="img/gallery/8.jpg"></a>
+        </li><li>
+          <a href="img/gallery/10.jpg"><img alt="img" class="singleImg" src="img/gallery/10.jpg"></a>
+        </li><li>
+          <a href="img/gallery/9.jpg"><img alt="img" src="img/gallery/9.jpg"></a>
+          <a href="img/gallery/11.jpg"><img alt="img" src="img/gallery/11.jpg"></a>
+        </li><li>
+          <a href="img/gallery/12.jpg"><img alt="img" src="img/gallery/12.jpg"></a>
+          <a href="img/gallery/13.jpg"><img alt="img" src="img/gallery/13.jpg"></a>
+        </li><li>
+          <a href="img/gallery/14.jpg"><img alt="img" src="img/gallery/14.jpg"></a>
+          <a href="img/gallery/15.jpg"><img alt="img" src="img/gallery/15.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/16.jpg"><img alt="img" src="img/gallery/16.jpg"></a>
+          <a href="img/gallery/17.jpg"><img alt="img" src="img/gallery/17.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/18.jpg"><img alt="img" src="img/gallery/18.jpg"></a>
+          <a href="img/gallery/19.jpg"><img alt="img" src="img/gallery/19.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/20.jpg"><img alt="img" src="img/gallery/20.jpg"></a>
+          <a href="img/gallery/21.jpg"><img alt="img" src="img/gallery/21.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/22.jpg"><img alt="img" src="img/gallery/22.jpg"></a>
+          <a href="img/gallery/23.jpg"><img alt="img" src="img/gallery/23.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/24.jpg"><img alt="img" src="img/gallery/24.jpg"></a>
+          <a href="img/gallery/25.jpg"><img alt="img" src="img/gallery/25.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/26.jpg"><img alt="img" src="img/gallery/26.jpg"></a>
+          <a href="img/gallery/27.jpg"><img alt="img" src="img/gallery/27.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/28.jpg"><img alt="img" src="img/gallery/28.jpg"></a>
+          <a href="img/gallery/29.jpg"><img alt="img" src="img/gallery/29.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/30.jpg"><img alt="img" src="img/gallery/30.jpg"></a>
+          <a href="img/gallery/31.jpg"><img alt="img" src="img/gallery/31.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/32.jpg"><img alt="img" class="singleImg" src="img/gallery/32.jpg"></a>
+        </li><li><!-- 
+          <a href="img/gallery/33.jpg"><img alt="img" class="singleImg" src="img/gallery/33.jpg"></a>
+        </li><li>
+          <a href="img/gallery/34.jpg"><img alt="img" src="img/gallery/34.jpg"></a>
+          <a href="img/gallery/41.jpg"><img alt="img" src="img/gallery/41.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/35.jpg"><img alt="img" class="singleImg" src="img/gallery/35.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/36.jpg"><img alt="img" class="singleImg" src="img/gallery/36.jpg"></a>
+        </li><li>   -->
+          <a href="img/gallery/37.jpg"><img alt="img" class="singleImg" src="img/gallery/37.jpg"></a><!-- 
+        </li><li>  
+          <a href="img/gallery/38.jpg"><img alt="img" class="singleImg" src="img/gallery/38.jpg"></a>
+        </li><li>  
+          <a href="img/gallery/39.jpg"><img alt="img" class="singleImg" src="img/gallery/39.jpg"></a> -->
+<!--         </li><li>  
+          <a href="img/gallery/40.jpg"><img alt="img" class="singleImg" src="img/gallery/40.jpg"></a>
+        </li><li>
+          <a href="img/gallery/42.jpg"><img alt="img" class="singleImg" src="img/gallery/42.jpg"></a> -->
+        </li>
+      <!-- </ul>
+      <ul id="oldGallery" class="popup-gallery owl-carousel hidden">
+        <li>
+          <a href="img/gallery/52.jpg"><img alt="img" src="img/gallery/52.jpg"></a>
+        </li><li>
+          <a href="img/gallery/43.jpg"><img alt="img" src="img/gallery/43.jpg"></a>
+          <a href="img/gallery/44.jpg"><img alt="img" src="img/gallery/44.jpg"></a>
+        </li><li>
+          <a href="img/gallery/46.jpg"><img alt="img" src="img/gallery/46.jpg"></a>
+          <a href="img/gallery/47.jpg"><img alt="img" src="img/gallery/47.jpg"></a>
+        </li><li>
+          <a href="img/gallery/48.jpg"><img alt="img" src="img/gallery/48.jpg"></a>
+          <a href="img/gallery/49.jpg"><img alt="img" src="img/gallery/49.jpg"></a>
+        </li><li>
+          <a href="img/gallery/50.jpg"><img alt="img" src="img/gallery/50.jpg"></a>
+          <a href="img/gallery/51.jpg"><img alt="img" src="img/gallery/51.jpg"></a>
+        </li><li>
+          <a href="img/gallery/53.jpg"><img alt="img" src="img/gallery/53.jpg"></a>
+        </li><li>
+          <a href="img/gallery/45.jpg"><img alt="img" src="img/gallery/45.jpg"></a>
+          <a href="img/gallery/56.jpg"><img alt="img" src="img/gallery/56.jpg"></a>
+        </li><li>
+          <a href="img/gallery/55.jpg"><img alt="img" src="img/gallery/55.jpg"></a>
+        </li>-->
+      </ul> 
+    </section>
+    <section id="block-price">
+      <h2>расценки</h2>
+        <ul>
+          <li></li>
+          <li><h3 class="orange">1000 <span>р./кв.м.</span></h3></li>
+          <li class="space"></li>
+          <li><h3 class="green">1500 <span>р./кв.м.</span></h3></li>
+        </ul><ul>
+          <li>Обмерный план</li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>План демонтажа и монтажа </li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>План расстановки мебели и внутреннего оборудования с габаритами и размерами</li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>План по электрике относительно расстановки мебели </li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>План полов и потолков</li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>Развертка стен </li>
+          <li><img alt="img" src="img/tick.png"></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li>Ведение объекта (авторский надзор)</li>
+          <li></li>
+          <li class="space"></li>
+          <li><img alt="img" src="img/tick.png"></li>
+        </ul><ul>
+          <li></li>
+          <li></li>
+          <li class="space"></li>
+          <li></li>
+        </ul><ul>
+          <li>Визуализация проекта</li>
+          <li></li>
+          <li class="space"></li>
+          <li><h3 class="blue">250 <span>р./кв.м.</span></h3></li>
+        </ul>
+    </section>
+    <section id="block-order">
+      <form name="order">
+        <h1>У вас есть вопросы?</h1>        
+        <p>Оставьте заявку и мы с Вами свяжемся</p>
+        <input type="text" name="name" size="40" placeholder="Ваше имя">
+        <input type="tel" name="phone" size="40" placeholder="Телефон">
+        <input type="email" name="email" size="40" placeholder="Электронная почта">
+        <input id="submit" type="submit" name="send" value="Отправить заявку">
+      </form>
+    </section>
+    <footer>
+      <div class="contact">8 921 979-34-25</div>
+      <div id="email">geometriadizaina@mail.ru</div>
+      <p>2018 «Геометрия Дизайна». Все права защищены.</p>
+    </footer>
+  </div>
 </body>
